<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FitnessGoalsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/FITNESS_purple"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tvFitnessGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center_vertical"
        android:text="@string/tvFitnessGoals"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCaloriesNeeded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="Daily Caloric Goal"
        android:textColor="@color/FITNESS_purple"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/tvCaloriesNeededValue"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="--"
        android:textColor="@color/FITNESS_purple"
        android:textSize="120sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCaloriesNeeded" />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Warning: It is not adivsed to lose more than 2 pounds a week."
        android:textColor="@color/FITNESS_purple"
        android:textSize="17sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCaloriesNeededValue" />

    <TextView
        android:id="@+id/tvBMR"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="BMR"
        android:textColor="@color/FITNESS_purple"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWarning" />

    <TextView
        android:id="@+id/tvBMRValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="--"
        android:textColor="@color/FITNESS_purple"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBMR" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4EDFF"
        android:gravity="center"
        android:paddingTop="35dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/trWeightGoal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="Weight Goal:"
            android:textColor="#8E66DA"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:id="@+id/trWeightGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4EDFF"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/trWeightGoalAmount">

        <RadioGroup
            android:id="@+id/rgWeightGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbLose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif"
                android:text="Lose"
                android:textColor="@color/FITNESS_purple"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/rbMaintain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif"
                android:text="Maintain"
                android:textColor="@color/FITNESS_purple"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/rbGain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Gain"
                android:textColor="@color/FITNESS_purple"
                android:textSize="25sp" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:id="@+id/trWeightGoalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4EDFF"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tableRow">

        <EditText
            android:id="@+id/etWeightGoalNumber"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/FITNESS_purple"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvPoundsPerWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="lbs. per week"
            android:textColor="@color/FITNESS_purple"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4EDFF"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/trLifestyle">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="LifeStyle:"
            android:textColor="#8E66DA"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:id="@+id/trLifestyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4EDFF"
        android:gravity="center"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/trSubmit">

        <TextView
            android:id="@+id/tvLifeStyleValue"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:textAlignment="textEnd"
            android:textColor="#FFA379F2"
            android:textSize="25sp" />

        <SeekBar
            android:id="@+id/seekBarLifeStyle"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:max="4"
            android:progress="0" />

    </TableRow>

    <TableRow
        android:id="@+id/trSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4EDFF"
        android:gravity="center"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gradient_blue"
            android:gravity="center"
            android:text="Calculate" />
    </TableRow>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D4C5F1"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>