...
    <string name="tvChangePicture">Change Profile Picture</string>
    <string name="tvEditProfile">EDIT PROFILE</string>
    <string name="etZip">Country</string>
    <string name="tvZip">ZIP Code</string>
    <string name="buttonChangePicture">Change Profile Picture</string>
    <string name="tvAge">Age</string>
    <string name="buttonSaveProfile">Save</string>
    <string name="buttonCreateNewUser">New User</string>
    <string name="buttonContinue">Continue</string>
    <string name="tvWelcomeUser">WELCOME,</string>
    <string name="tvBMICalculator">BMI CALCULATOR</string>
    <string name="tvBMIValue">19.5</string>
    <string name="tvBMIAge">Age:</string>
    <string name="tvBMIAgeValue">30</string>
...
